--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
-        <div class="photographer_section"></div>
+        <section class="photographer_section"></section>
     </main>
     <script src="public/scripts/factories/photographer.min.js"></script>
     <script src="public/scripts/pages/index.min.js"></script>
