--- a/app/photographer.html
+++ b/app/photographer.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" href="assets/favicon.png">
-		<link href="public/main.min.css" rel="stylesheet" type="text/css" />
+		<link href="public/main.min.css" rel="stylesheet" type="text/css">
 		<title>Fisheye - photographe </title>
 	</head>
 	<body>
 		<header>
-			<img src="assets/images/logo.png" class="logo" />
+			<img src="assets/images/logo.png" class="logo" alt="">
 		</header>
 		<main id="main">
-			<div class="photograph-header">
+			<header class="photograph-header">
 				<button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-			</div>
+			</header>
 		</main>
 		<div id="contact_modal">
 			<div class="modal">
 				<header>
 					<h2>Contactez-moi</h2>
-					<img src="assets/icons/close.svg" onclick="closeModal()" />
+					<img src="assets/icons/close.svg" onclick="closeModal()" alt="">
 				</header>
 				<form>
 					<div>
 						<label>Prénom</label>
-						<input />
+						<input>
 					</div>
 					<button class="contact_button">Envoyer</button>
 				</form>
