--- a/app/photographer.html
+++ b/app/photographer.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="assets/images/logo.png" class="logo" alt="">
+			<img src="assets/images/logo.png" class="logo" alt="logo">
 		</header>
 		<main id="main">
 			<header class="photograph-header">
