--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,11 @@
 		<main id="main">
 			<div class="photographer_section"></div>
 		</main>
+		<script src="public/scripts/models/AbstractModelPhotographer.min.js"></script>
+		<script src="public/scripts/models/photographerModelCard.min.js"></script>
+		<script src="public/scripts/templates/photographerTemplateCard.min.js"></script>
 		<script src="public/scripts/factories/photographer.min.js"></script>
+		<script src="public/scripts/utils/getPhotographers.min.js"></script>
 		<script src="public/scripts/pages/index.min.js"></script>
 	</body>
 </html>
