--- a/app/photographer.html
+++ b/app/photographer.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="assets/images/logo.png" class="logo" alt="logo">
+			<a href="../"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
 		</header>
 		<main id="main">
 			<header class="photograph-header">
@@ -30,7 +30,12 @@
 				</form>
 			</div>
 		</div>
-		<script src="public/scripts/pages/photographer.min.js"></script>
+		<script src="public/scripts/models/AbstractModelPhotographer.min.js"></script>
+		<script src="public/scripts/templates/photographerTemplatePage.min.js"></script>
+		<script src="public/scripts/models/photographerModelPage.min.js"></script>
+		<script src="public/scripts/factories/photographer.min.js"></script>
 		<script src="public/scripts/utils/contactForm.min.js"></script>
+		<script src="public/scripts/utils/getPhotographers.min.js"></script>
+		<script src="public/scripts/pages/photographer.min.js"></script>
 	</body>
 </html>
