--- a/app/photographer.html
+++ b/app/photographer.html
@@ -11,7 +11,7 @@
 			<a href="../"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
 		</header>
 		<main id="main">
-			<header class="photograph-header">
+			<header class="photograph__header">
 				<button class="contact_button" onclick="displayModal()">Contactez-moi</button>
 			</header>
 		</main>
