--- a/app/photographer.html
+++ b/app/photographer.html
@@ -40,12 +40,7 @@
 				</form>
 			</div>
 		</div>
-		<script src="public/scripts/models/AbstractModelPhotographer.min.js"></script>
-		<script src="public/scripts/templates/photographerTemplatePage.min.js"></script>
-		<script src="public/scripts/models/photographerModelPage.min.js"></script>
-		<script src="public/scripts/factories/photographer.min.js"></script>
-		<script src="public/scripts/utils/contactForm.min.js"></script>
-		<script src="public/scripts/utils/getPhotographers.min.js"></script>
-		<script src="public/scripts/pages/photographer.min.js"></script>
+		<script src="public/scripts/base.min.js"></script>
+		<script src="public/scripts/photographer.min.js"></script>
 	</body>
 </html>
