add custom select

--- a/app/photographer.html
+++ b/app/photographer.html
@@ -15,14 +15,7 @@
 				<button class="contact_button" onclick="displayModal()">Contactez-moi</button>
 			</header>
 			<section class="photographer__section">
-				<nav>
-					<p>Trier par</p>
-					<select name="sort_by" id="sort_by">
-						<option value="popularity">Popularité</option>
-						<option value="date">Date</option>
-						<option value="title">Titre</option>
-					</select> 
-				</nav>	
+				<nav role="navigation"></nav>
 			</section>
 		</main>
 		<div id="contact_modal">
