--- a/app/photographer.html
+++ b/app/photographer.html
@@ -16,6 +16,7 @@
 			</header>
 			<section class="photographer__section">
 				<nav role="navigation"></nav>
+				<div class="photographer__section__media-wrapper"></div>
 			</section>
 		</main>
 		<div id="contact_modal">
