add contact form

--- a/app/photographer.html
+++ b/app/photographer.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="icon" type="image/png" href="assets/favicon.png">
 		<link href="public/main.min.css" rel="stylesheet" type="text/css">
-		<title>Fisheye - photographe </title>
+		<title>photographe - Fisheye</title>
 	</head>
 	<body>
 		<header>
@@ -12,28 +12,13 @@
 		</header>
 		<main id="main">
 			<header class="photographer__header">
-				<button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+				<button class="contact_button">Contactez-moi</button>
 			</header>
 			<section class="photographer__section">
 				<nav role="navigation"></nav>
 				<div class="photographer__section__media-wrapper"></div>
 			</section>
 		</main>
-		<div id="contact_modal">
-			<div class="modal">
-				<header>
-					<h2>Contactez-moi</h2>
-					<img src="assets/icons/close.svg" onclick="closeModal()" alt="">
-				</header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input>
-					</div>
-					<button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
 		<script src="public/scripts/base.min.js"></script>
 		<script src="public/scripts/photographer.min.js"></script>
 	</body>
