--- a/app/photographer.html
+++ b/app/photographer.html
@@ -8,11 +8,11 @@
 	</head>
 	<body>
 		<header>
-			<a href="../"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
+			<a href="../" tabindex="1"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
 		</header>
 		<main id="main">
 			<header class="photographer__header">
-				<button class="contact_button">Contactez-moi</button>
+				<button class="contact_button" tabindex="2">Contactez-moi</button>
 			</header>
 			<section class="photographer__section">
 				<nav role="navigation"></nav>
