--- a/app/photographer.html
+++ b/app/photographer.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="/" tabindex="1"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
+			<a href="/app" tabindex="1"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
 		</header>
 		<main id="main">
 			<header class="photographer__header">
