remove role from nav & css error

--- a/app/photographer.html
+++ b/app/photographer.html
@@ -15,7 +15,7 @@
 				<button class="contact_button" tabindex="2">Contactez-moi</button>
 			</header>
 			<section class="photographer__section">
-				<nav role="navigation"></nav>
+				<nav></nav>
 				<div class="photographer__section__media-wrapper"></div>
 			</section>
 		</main>
