w3c fix & css fix

--- a/app/photographer.html
+++ b/app/photographer.html
@@ -8,16 +8,16 @@
 	</head>
 	<body>
 		<header>
-			<a href="../app" tabindex="1"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
+			<a href="/" tabindex="1"><img src="assets/images/logo.png" class="logo" alt="logo"></a>
 		</header>
 		<main id="main">
 			<header class="photographer__header">
 				<button class="contact_button" tabindex="2">Contactez-moi</button>
 			</header>
-			<section class="photographer__section">
+			<div class="photographer__section">
 				<nav></nav>
 				<div class="photographer__section__media-wrapper"></div>
-			</section>
+			</div>
 		</main>
 		<script src="public/scripts/base.min.js"></script>
 		<script src="public/scripts/photographer.min.js"></script>
